--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       referrerpolicy="no-referrer"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <title>Checkout Page</title>
+    <title>Bookstore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
